--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,29 +10,31 @@
     <link rel="stylesheet" href="./assets/css/normalize.css">
     <link rel="stylesheet" href="./assets/css/index.css">
 </head>
+
 <body>
-    <header>
+    <header class="main-header">
         <a href="#">
-            <img src="./assets/img/perfil.png" alt="Foto perfil">
+            <img class="perfil-img" src="./assets/img/perfil.png" alt="Foto perfil">
         </a>
-        <nav>
+        <nav class="main-nav">
             <ul>
-                <li><a href="index.html"></a></li>
-                <li><a href="tipografia.html"></a></li>
-                <li><a href="cards.html"></a></li>
-                <li><a href="listas.html"></a></li>
-                <li><a href="formulario.html"></a></li>
-                <li><a href="botoes.html"></a></li>
-                <li><a href="tabelas.html"></a></li>
+                <li><a href="index.html"></a>Home</li>
+                <li><a href="tipografia.html">Tipografia</a></li>
+                <li><a href="cards.html"></a>Cards</li>
+                <li><a href="listas.html"></a>Listas</li>
+                <li><a href="formulario.html">Formulário</a></li>
+                <li><a href="botoes.html"></a>Botões</li>
+                <li><a href="tabelas.html"></a>Tabelas</li>
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="main">
         <h1>My Component</h1>
         <article>
             <h2>A sua área para armazenar seus códigos HTML e CSS</h2>
             <h3>Componente criados por Kauê Lima para os cursos da <a href="#">Serliv</a></h3>
-            <p>Desenvolvedor e instrutor de tecnologias front-end. Apaixonado por ensinar e transformar positivamente a vida das pessoas</p>
+            <p>Desenvolvedor e instrutor de tecnologias front-end. Apaixonado por ensinar e transformar positivamente a
+                vida das pessoas</p>
         </article>
         <address>
             <h3>Venha conhecer nossas redes sociais</h3>
@@ -44,4 +47,5 @@
         </address>
     </main>
 </body>
+
 </html>
